# kidocam

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  todo.md
apps/simulator/: CMakeLists.txt
apps/simulator/src/: main.cpp
src/: CMakeLists.txt
src/geometry/: mesh.cpp  mesh.hpp  point.cpp  point.hpp  pose.hpp  ray.hpp
src/geometry/camera_models/: kidoca.hpp  kitchen_door.cpp  kitchen_door.hpp  pinhole.cpp  pinhole.hpp  thin_lens.cpp  thin_lens.hpp
src/models/: kidoca.cpp  kidoca.hpp  thin_lens.cpp  thin_lens.hpp
src/utils/: types.hpp
